--- a/Edukator.BusinessLayer/Edukator.BusinessLayer.csproj
+++ b/Edukator.BusinessLayer/Edukator.BusinessLayer.csproj
@@ -5,12 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstract\" />
-    <Folder Include="Concrete\" />
     <Folder Include="Logging\" />
     <Folder Include="Container\" />
     <Folder Include="ErrorMessage\" />
     <Folder Include="ValidationRules\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Edukator.DataAccessLayer\Edukator.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\Edukator.EntityLayer\Edukator.EntityLayer.csproj" />
   </ItemGroup>
 
 </Project>
